--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script type='text/javascript' src='//pl26292844.effectiveratecpm.com/f0/9d/82/f09d821590ee57885ff4e3ea91d1e9b1.js'></script>
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-25LQ5GMS9E"></script>
 <script>
