--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <iframe width="1000" height="600" src="https://res.cloudinary.com/dhmhwwixo/video/upload/v1743780203/04045643_jurk9y.mp4" title="Sub)Real Mukbang- Braised Pork Abalone (Soy Sauce) 🥩 Fried Rice 🍚 ASMR KOREAN FOOD" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <iframe width="1000" height="1000" 
-            src="https://ptounood.top/4/8482704/" 
+            src="https://www.effectiveratecpm.com/ca1qqs8exy?key=8839ddd6099e83b2875a31fa370e8d72/" 
             title="My Video" 
             frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
