--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <iframe width="1000" height="1000"
 <iframe width="1000" height="600" src="https://videos.xxxvideoszoo.com/1/4352.mp4?sexp=1744277004&sip=2696637734&shs=xxxvideoszoo.com&sh=cd5072ab9f417584da0d49d8b0e6a5572c9c955d0d6c5c7e7d8cee24d6e4310d" title="Sub)Real Mukbang- Braised Pork Abalone (Soy Sauce) 🥩 Fried Rice 🍚 ASMR KOREAN FOOD" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <iframe width="1000" height="1000" 
-            src="https://www.effectiveratecpm.com/ca1qqs8exy?key=8839ddd6099e83b2875a31fa370e8d72/" 
+            src="https://www.profitableratecpm.com/ca1qqs8exy?key=8839ddd6099e83b2875a31fa370e8d72/" 
             title="My Video" 
             frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
